--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -19,10 +19,16 @@
             border: 1px solid black;
             padding: 10px;
         }
-        thead{
+        thead, tfoot{
             background-color: grey;
             color: white;
         }
+        
+        tbody > tr:nth-child(odd) {
+            background-color: lightblue;
+            font-weight: bold;
+        }
+        
         td.num {
             text-align: right;
         }
@@ -35,8 +41,8 @@
          <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" width=" 30px">População</th>
             </tr>
         </thead>
         <tbody>
@@ -49,15 +55,30 @@
                 <td class="num">39.919.049</td>
             </tr>
             <tr>
-                <td>Rio de Janeiro</td>
-                <td class="num">18.919.049</td>
+                <td>Pernambuco</td>
+                <td class="num">9.919.049</td>
+            </tr>
+
+            <tr>
+                <td>Ceará</td>
+                <td class="num">1.919.049</td>
+            </tr>
+
+            <tr>
+                <td>Bahia</td>
+                <td class="num">1.419.049</td>
+            </tr>
+
+            <tr>
+                <td>Goiás</td>
+                <td class="num">919.049</td>
             </tr>
 
         </tbody>
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num">109.049.038</td>
 
             </tr>
